Import of NATON/Net-Amazon-AWSSign-0.05 from CPAN.
gitpan-cpan-distribution: Net-Amazon-AWSSign
gitpan-cpan-version:      0.05
gitpan-cpan-path:         NATON/Net-Amazon-AWSSign-0.05.tar.gz
gitpan-cpan-author:       NATON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Net-Amazon-AWSSign
-version:             0.04
+version:             0.05
 abstract:            Perl extension to create signatures for AWS requests
 license:             ~
 author:              
@@ -8,6 +8,9 @@ author:
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
+    Digest::SHA:                   0
+    MIME::Base64:                  0
+    URI::Escape:                   0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
