Import of NATON/Net-Amazon-AWSSign-0.09 from CPAN.
gitpan-cpan-distribution: Net-Amazon-AWSSign
gitpan-cpan-version:      0.09
gitpan-cpan-path:         NATON/Net-Amazon-AWSSign-0.09.tar.gz
gitpan-cpan-author:       NATON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,24 @@
 --- #YAML:1.0
-name:                Net-Amazon-AWSSign
-version:             0.08
-abstract:            Perl extension to create signatures for AWS requests
-license:             ~
-author:              
+name:               Net-Amazon-AWSSign
+version:            0.09
+abstract:           Perl extension to create signatures for AWS requests
+author:
     - Naton Aiman-Smith <naton@>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Digest::SHA:                   0
-    MIME::Base64:                  0
-    URI::Escape:                   0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Digest::SHA:   0
+    MIME::Base64:  0
+    URI::Escape:   0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.52
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
